--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <p><span class="LG">R</span>ock <span class="LG">P</span>aper <span class="LG">S</span>cissor <span class="LG">G</span>ame </p>
             </div>
             <div id="score">
-                <p>Your result after <span id="yourTries"> 0 </span> tries: Win Score: <span id="yourScore"> 0 </span> - Loss Score: <span id="yourlosses"> 0 </span></p>
+                <p> Tries: <span id="yourTries"> 0 </span> Your Score: <span id="yourScore"> 0 </span> - Losses: <span id="yourlosses"> 0 </span></p>
             </div>
         </div>
         <div id="gamePhotos">
